[gd_scene load_steps=7 format=3 uid="uid://dwe6hqxcxga2x"]

[ext_resource type="Script" path="res://Elements/enemies/bomber.gd" id="1_iqn42"]
[ext_resource type="PackedScene" uid="uid://d03b14il32qs5" path="res://Elements/assets/gameplay/explosion.tscn" id="2_s131x"]
[ext_resource type="AudioStream" uid="uid://b3roo26suawn4" path="res://Art/audio/bomber_buildup.wav" id="4_bujc0"]
[ext_resource type="PackedScene" uid="uid://dxj1vlaxxy54b" path="res://Art/blend/assets/enemies/bomber.blend" id="5_006x1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4mudu"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_gw4d5"]
radius = 4.0

[node name="Bomber" type="RigidBody3D" groups=["enemy"]]
mass = 45.0
can_sleep = false
max_contacts_reported = 5
contact_monitor = true
script = ExtResource("1_iqn42")
explosion = ExtResource("2_s131x")

[node name="Buildup" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_bujc0")
volume_db = -10.0
bus = &"sfx"

[node name="bomber" parent="." instance=ExtResource("5_006x1")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_4mudu")

[node name="Trigger" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Trigger"]
shape = SubResource("SphereShape3D_gw4d5")

[node name="RayCast3D" type="RayCast3D" parent="."]
top_level = true
target_position = Vector3(5, 0, 0)

[node name="FuseTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Trigger" to="." method="_on_trigger_body_entered"]
[connection signal="timeout" from="FuseTime" to="." method="_on_delay_timeout"]
